<resources>
    <!--Landing page-->
    <string name="app_name">Exprimons-Nous !</string>
    <string name="descriptionApp">Bienvenue sur Exprimons-Nous, la plateforme communautaire d\'entreprise où chacun à son mot à dire !</string>
    <string name="descriptionApp2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut diam nisl, lacinia ut imperdiet eget, pharetra id justo. Nulla volutpat, augue eu lobortis lacinia, lectus nibh scelerisque dui, dapibus malesuada.</string>
    <string name="createAccount">Créez gratuitement un compte</string>
    <string name="login">Connectez-vous</string>
    <string name="sign_in_desc">Créez un compte afin de rejoindre un espace d’échange convivial et faites entendre votre voix !</string>

    <!--Sign up page-->
    <!--Labels-->
    <string name="firstnameTXT">Votre prénom :</string>
    <string name="lastnameTXT">Votre nom :</string>
    <string name="birthdateTXT">Date de naissance :</string>
    <string name="emailTXT">Votre E-Mail :</string>
    <string name="genderTXT">Votre sexe :</string>
    <string name="areaCodeTXT">Votre code postal :</string>
    <string name="passwdTXT">Votre mot de passe :</string>
    <!--Hints-->
    <string name="firstnameHint">exemple : John</string>
    <string name="lastnameHint">exemple : DOE</string>
    <string name="birthdateHint">exemple : 01/12/1950</string>
    <string name="emailHint">exemple : john.doe@liberty.com</string>
    <string name="genderHint">exemple : Mâle</string>
    <string name="areaCodeHint">exemple : 69420</string>
    <string name="passwdHint">exemple : ●●●●●●●●●●●</string>

    <!--Login in page-->
    <!--Labels-->
    <string name="loginTitle">Connectez-vous !</string>
    <string name="loginDesc">Connectez-vous à votre compte pour être tenu informés des dernières publications !</string>
    <string name="loginButton">Connexion</string>
    <!--reuse emailTXT & passwdTXT for Label-->
    <!--Hints-->
    <!--reuse emailHint & passwdHint for Hint-->

    <!--Select Commune page-->
    <!--Labels-->
    <string name="communeTitle">Rejoignez l’espace communal !</string>
    <string name="communeDesc">Selectionnez votre commune de résidence pour rejoindre l’espace d’échange communal !</string>
    <string name="communeTXT">Votre commune :</string>
    <string name="next">Suivant</string>
    <string name="skip">Passer cette étape</string>
    <!--Hints-->
    <string name="communeHint">Selectionnez votre commune</string>

    <!--Select Commune page-->
    <!--Labels-->
    <string name="companyTitle">Rejoignez l’espace d’entreprise !</string>
    <string name="companyDesc">Entrez le code d’invitation de votre entreprise pour rejoindre l’espace d’entreprise !</string>
    <string name="companyTXT">Votre code :</string>
    <!--Hint-->
    <string name="companyHint">Exemple : 1453</string>

    <!-- BOTTOM NAVIGATION BAR -->
    <string name="title_post">Posts</string>
    <string name="title_vote">Votes</string>
    <string name="title_profile">Profile</string>

    <string name="title_activity_main2">Exprimons-Nous !</string>
    <string name="reset_password_fragment">Reset Password fragment</string>
    <string name="switch_community">Switch Community</string>
    <string name="resetPassword">Réinitialiser mon mot de passe</string>
    <string name="submit">Enregistrer</string>
    <string name="cancel">Annuler</string>

    <!-- RÉINITIALISATION DU MOT DE PASSE -->
    <string name="insert_password">Nouveau mot de passe :</string>
    <string name="confirmation_password">Confirmation :</string>
    <string name="different_passwords">Les deux mots de passe doivent être identiques.</string>
    <string name="create_post_fragment">Hello New Post Fragment</string>
    <string name="whats_new">Quoi de neuf John !</string>
    <string name="create_post_hint">Rédidez votre post ici...</string>
    <string name="new_post">Poster</string>
    <string name="create_title_hint">Le titre de votre post...</string>
    <string name="participation_vote">Je participe !</string>
    <string name="postCreated">Le post a été créé</string>
    <string name="createPostError">Une erreur est survenue.</string>

    <!-- REWARDS MODAL TEXT -->
    <string name="super_reward">Super !</string>
    <string name="interesting_reward">Intéressant !</string>
    <string name="bof_reward">Bof...</string>
    <string name="not_interesting_reward">Pas Intéressant</string>
    <string name="like_toast">Je like !</string>
    <string name="error">Une erreur est survenue.</string>
    <string name="dislike_toast">Je dislike !</string>
    <string name="hello_vote_participation_fragment">Hello Vote Participation Fragment</string>


    <!-- VOTE OPTION FRAGMENT -->
    <string name="title_vote_title"><u>Title :</u></string>
    <string name="title_vote_title_test">Is Thanos bae ?</string>
    <string name="sujet_vote_title"><u>Sujet :</u></string>
    <string name="sujet_vote_title_test">Is Thanos bae or not ?</string>
    <string name="validation_button">Valider</string>
    <string name="cancel_button">Annuler</string>
    <string name="logo_description">Logo of Exprimons-Nous plateform.</string>
    <string name="logo_like_description">Logo Like</string>
    <string name="logo_dislike_description">Logo Dislike</string>
    <string name="logo_commentaire_description">Logo Commentaire</string>
    <string name="logo_r_compenses_description">Logo Récompenses</string>
    <string name="like">J\'aime</string>
    <string name="dislike">J\'aime pas</string>
    <string name="recompenses_string">Récompenses</string>
    <string name="commentaires_string">Commentaires</string>


    <!-- SPINNER GENDER -->
    <string-array name="gender_array">
        <item>Mâle</item>
        <item>Femelle</item>
        <item>Autre</item>
    </string-array>
    <string name="anonymous_fullname">Utilisateur Anonyme</string>
    <string name="anonyme_comment_button">POSTER EN ANONYME</string>
    <string name="commentaires_title">Commentaires</string>
    <string name="loading_string">Loading...</string>
    <string name="already_participated">Vous avez déjà participé à ce vote.</string>
    <string name="vote_submitted">Votre vote a été pris en compte.</string>
    <string name="add_reward_text">Ajouter une récompense</string>
    <string name="sign_in">Inscrivez-vous</string>
    <string name="get_help">FAQ Exprimons-Nous</string>
    <string name="get_help_logo_description">Get Help Logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="posts_title">Les posts</string>
    <string name="vote_title">Les votes</string>
    <string name="profile_title">Mon profil</string>
    <string name="report_post">Signaler le post</string>
    <string name="report_comment">Signaler le commentaire</string>
    <string name="app_get_help_title">Page d\'aide d\'Exprimons Nous</string>
    <string name="contact_us_title">Contactez-nous !</string>
    <string name="contact_us_text">Vous avez une suggestion d\'amélioration ? Vous rencontrez un problème avec notre plateforme ?\n\n N\'hésitez pas à nous contacter par le formulaire ci-dessous !</string>
    <string name="log_out_title">Déconnectez-vous</string>
    <string name="log_out_text">Cliquez sur le bouton ci-dessous pour vous déconnecter de votre compte.\n\n Vous pourez retourver toutes les actualités de l\'entreprise en vous reconnectant à votre compte !</string>
    <string name="reinit_password">Réinitialisation de votre mot de passe</string>
    <string name="reinit_password_intructions">Entrez deux fois votre nouveau mot de passe.</string>
    <string name="support_message_hint">Sujet du message (en quelques mots)</string>
    <string name="join_us_title">Rejoignez-nous !</string>
    <string name="placeholder_avatar">...</string>
    <string name="menu_icon">Menu icon</string>
    <string name="admin_post_logo_description">Admin post logo</string>
    <string name="like_icon">Like icon</string>
    <string name="dislike_icon">Dislike icon</string>
    <string name="comment_icon">Comment icon</string>
    <string name="reward_icon">Reward icon</string>
    <string name="add_post_icon">Add post icon</string>
    <string name="votre_message">Votre message...</string>
    <string name="send_message">Envoyer le message</string>
    <string name="log_out">Déconnexion</string>
    <string name="reward_super">Reward super</string>
    <string name="reward_interessant">Reward interessant</string>
    <string name="reward_bof">Reward bof</string>
    <string name="reward_pas_interessant">Reward pas interessant</string>

</resources>