<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_posts"
        android:enabled="true"
        android:icon="@drawable/ic_dimond_alt_light"
        android:title="@string/title_post"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_votes"
        android:enabled="true"
        android:icon="@drawable/ic_dimond_alt_light"
        android:title="@string/title_vote"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_dimond_alt_light"
        android:title="@string/title_profile"
        app:showAsAction="ifRoom" />
</menu>