<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundBlue"
        tools:context=".MainActivity">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/logo"
            android:layout_margin="20dp"
            android:src="@drawable/logoexprimonsnous2"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/logo_description" />

        <RelativeLayout
            android:id="@+id/whiteRoundedLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_alignParentBottom="true"
            android:background="@drawable/layout_bg">


            <TextView
                android:id="@+id/RejoignezNous"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/quicksandsemibold"
                android:gravity="center"
                android:text="@string/join_us_title"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/signInDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/RejoignezNous"
                android:layout_margin="30dp"
                android:fontFamily="@font/quicksandregular"
                android:gravity="center"
                android:text="@string/sign_in_desc"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/firstNameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/signInDescription"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/quicksandsemibold"
                android:text="@string/firstnameTXT"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/firstNameLabel"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext_bg"
                android:drawablePadding="20dp"
                android:elevation="5dp"
                android:textSize="20sp"
                android:fontFamily="@font/quicksandsemibold"
                android:gravity="center|start"
                android:hint="@string/firstnameHint"
                android:padding="10dp"
                android:textStyle="italic"
                android:inputType="textPersonName"
                android:autofillHints="name" />

            <TextView
                android:id="@+id/lastNameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/firstname"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/quicksandsemibold"
                android:text="@string/lastnameTXT"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/lastNameLabel"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext_bg"
                android:drawablePadding="20dp"
                android:elevation="5dp"
                android:textSize="20sp"
                android:fontFamily="@font/quicksandsemibold"
                android:gravity="center|start"
                android:hint="@string/lastnameHint"
                android:padding="10dp"
                android:textStyle="italic"
                android:inputType="textPersonName"
                android:autofillHints="name" />

            <TextView
                android:id="@+id/bithdayLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lastname"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/quicksandsemibold"
                android:text="@string/birthdateTXT"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/bithdate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/bithdayLabel"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext_bg"
                android:clickable="false"
                android:cursorVisible="false"
                android:drawablePadding="20dp"
                android:elevation="5dp"
                android:textSize="20sp"
                android:fontFamily="@font/quicksandsemibold"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center|start"
                android:hint="@string/birthdateHint"
                android:padding="10dp"
                android:textStyle="italic"
                android:autofillHints=""
                android:inputType="date" />


            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/bithdate"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/quicksandsemibold"
                android:text="@string/emailTXT"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/emailLabel"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:drawablePadding="20dp"
                android:textSize="20sp"
                android:fontFamily="@font/quicksandsemibold"
                android:hint="@string/emailHint"
                android:padding="10dp"
                android:gravity="center|start"
                android:background="@drawable/edittext_bg"
                android:elevation="5dp"
                android:textStyle="italic"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/genderLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/quicksandsemibold"
                android:text="@string/genderTXT"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/genderLabel"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext_bg"
                android:elevation="5dp"
                android:textSize="20sp"
                android:fontFamily="@font/quicksandsemibold"
                android:foregroundTint="#FFFFFF"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

            <TextView
                android:id="@+id/areaCodeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/gender_spinner"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/quicksandsemibold"
                android:text="@string/areaCodeTXT"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/areaCode"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/areaCodeLabel"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="postalCode"
                android:background="@drawable/edittext_bg"
                android:drawablePadding="20dp"
                android:elevation="5dp"
                android:fontFamily="@font/quicksandsemibold"
                android:gravity="center|start"
                android:hint="@string/areaCodeHint"
                android:inputType="number"
                android:padding="10dp"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/passwdLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/areaCode"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/quicksandsemibold"
                android:text="@string/passwdTXT"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/passwd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/passwdLabel"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:drawablePadding="20dp"
                android:textSize="20sp"
                android:fontFamily="@font/quicksandsemibold"
                android:hint="@string/passwdHint"
                android:inputType="textPassword"
                android:padding="10dp"
                android:gravity="center|start"
                android:background="@drawable/edittext_bg"
                android:elevation="5dp"
                android:textStyle="italic"
                android:autofillHints="password" />

            <TextView
                android:id="@+id/companyLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwd"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/quicksandsemibold"
                android:text="@string/companyTXT"
                android:textColor="@color/black" />

            <!--ADD EditText HERE-->
            <EditText
                android:id="@+id/companyCode"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/companyLabel"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:drawablePadding="20dp"
                android:textSize="20sp"
                android:fontFamily="@font/quicksandsemibold"
                android:hint="@string/companyHint"
                android:padding="10dp"
                android:gravity="center|start"
                android:background="@drawable/edittext_bg"
                android:elevation="5dp"
                android:textStyle="italic"
                android:autofillHints=""
                android:inputType="number" />
            <!--ADD EditText HERE-->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signInBtn"
                android:layout_width="320dp"
                android:layout_height="75dp"
                android:layout_below="@id/companyCode"
                android:layout_centerHorizontal="true"
                android:layout_margin="15dp"
                android:backgroundTint="@color/blueBtn"
                android:fontFamily="@font/quicksandbold"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>