<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:elevation="6dp"
    android:layout_margin="3dp">

    <ImageView
        android:id="@+id/menu_post"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_menu_post_variant"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:focusable="true"
        android:clickable="true"
        android:contentDescription="@string/menu_icon" />


    <LinearLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="15dp"

        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/avatar_textfield"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/avatar_bg"
            android:gravity="center"
            android:text="@string/placeholder_avatar"
            android:textColor="@color/lettering_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fullnameTXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/loading_string"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/is_admin_post"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center|start"
            android:src="@drawable/ic_admin_bis"
            android:visibility="visible"
            android:contentDescription="@string/admin_post_logo_description" />
    </LinearLayout>

    <TextView
        android:id="@+id/bodyTXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_layout"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/loading_string"
        android:textColor="@color/black"
        android:textSize="14sp" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bodyTXT">

        <!--Partie 3 : Les likes/dislikes/commentaires/reward-->
        <LinearLayout
            android:id="@+id/likes_dislikes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

            <!--inséré les réact et les chiffres-->
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/logo_like_description"
                android:src="@drawable/ic_happy" />

            <TextView
                android:id="@+id/likesTXT"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/placeholder_avatar"/>

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:background="@android:color/white" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/logo_dislike_description"
                android:src="@drawable/ic_sad" />

            <TextView
                android:id="@+id/dislikesTXT"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/placeholder_avatar" />

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:background="@android:color/white" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/logo_commentaire_description"
                android:src="@drawable/ic_chat_fill"
                android:visibility="gone" />

            <TextView
                android:id="@+id/commentTXT"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/placeholder_avatar"
                android:visibility="gone" />

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:background="@android:color/white" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/logo_r_compenses_description"
                android:src="@drawable/ic_dimond_alt_light"
                android:visibility="gone" />

            <TextView
                android:id="@+id/rewardTXT"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/placeholder_avatar"
                android:visibility="gone" />
        </LinearLayout>

        <!--Partie 4 : Les boutons Like/Dislike/Comment/Reward-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="7dp"
            android:layout_below="@+id/likes_dislikes">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- BOUTON -->
                <LinearLayout
                    android:id="@+id/likeBtn"
                    android:hapticFeedbackEnabled="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="2dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:src="@drawable/ic_like"
                        android:contentDescription="@string/like_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/like"
                        android:textColor="@color/black"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/dislikeBtn"
                    android:hapticFeedbackEnabled="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_toEndOf="@+id/likeBtn"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:src="@drawable/ic_dislike"
                        android:contentDescription="@string/dislike_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/dislike"
                        android:textColor="@color/black"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/commentBtn"
                    android:hapticFeedbackEnabled="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_toEndOf="@+id/dislikeBtn"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:src="@drawable/ic_comment"
                        android:contentDescription="@string/comment_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/commentaires_string"
                        android:textColor="@color/black"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/rewardBtn"
                    android:hapticFeedbackEnabled="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="3dp"
                    android:layout_toEndOf="@+id/commentBtn"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:src="@drawable/ic_reward"
                        android:contentDescription="@string/reward_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/recompenses_string"
                        android:textColor="@color/black"
                        android:textSize="13sp" />
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>